--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="dark:bg-black bg-white font-[Sora] dark:text-white text-dark">
+<body class="font-[Sora] ">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
